syntax = "proto3";

package SmartClassroom;

// make the package valid in java create the options
option java_package = "com.proto.SmartClassroom";
// option to organise code into multiple files
option java_multiple_files = true;


message ContentIdRequest {
  // create a message from the client for the server can respond
  int32 content_Id = 1;
}

// answer from the server

message ContentIdResponse {
  int32 result = 1;
}

// client side streaming for service one method 3
message DisplayCommandRequest {
  string display = 1;
}
message DisplayUpdateResponse {
  string displaying = 1;
}

service ContentSelection {
  // define a unary endpoint called ContentSelection
  rpc ContentNow(ContentIdRequest) returns (ContentIdResponse);
  // client side streaming for service one method 3
  rpc StreamDisplayUpdate (stream DisplayCommandRequest) returns (DisplayUpdateResponse);
}







